Cloud Drive: cleanup of tests dependencies